--- a/src/assets/css/_dx.scss
+++ b/src/assets/css/_dx.scss
@@ -1046,3 +1046,18 @@ $color: rgb(182, 182, 182);
 		color: $main-color-600 !important;
 	}
 }
+
+.dx-icon-column-chooser {
+	&::before {
+		color: #fff !important;
+	}
+}
+.dx-empty {
+	height: auto !important;
+	min-height: 40px !important;
+	.dx-datagrid-nodata {
+		letter-spacing: -1.2px;
+		font-size: 1.4rem;
+		font-weight: 400;
+	}
+}
