--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -553,3 +553,11 @@ span.cmds {
 		color: #fff;
 	}
 }
+
+.header-elements-md-inline {
+	.page-title {
+		letter-spacing: -1.2px;
+		font-size: 1.4rem;
+		font-weight: 400;
+	}
+}
