feat: Acceso Estudiante

--- a/src/assets/css/_dx.scss
+++ b/src/assets/css/_dx.scss
@@ -1099,7 +1099,7 @@ $color: rgb(182, 182, 182);
 }
 
 .dx-overlay-content {
-	min-width: 400px !important;
+	// min-width: 400px !important;
 	border-radius: 5px !important;
 	border-top-left-radius: 0 !important;
 	.dx-popup-content {
