--- a/src/assets/css/_dx.scss
+++ b/src/assets/css/_dx.scss
@@ -1207,3 +1207,34 @@ $color: rgb(182, 182, 182);
 		}
 	}
 }
+
+.dx-dropdownbutton-content {
+	.dx-scrollview-content {
+		padding: 0.6rem 0;
+		.dx-list-item {
+			&.dx-state-hover {
+				background-color: $main-color-200;
+			}
+			.dx-list-item-content {
+				margin: 0;
+				padding: 0.2rem 1rem;
+				// font-weight: 500;
+				vertical-align: top !important;
+				line-height: 18px !important;
+				font-size: 1rem !important;
+				i {
+					line-height: 16px !important;
+					margin-right: 0.3rem !important;
+					color: $main-color-600 !important;
+					font-size: 16px !important;
+				}
+			}
+		}
+	}
+}
+
+tr.hovered {
+	td {
+		background-color: $main-color-200 !important;
+	}
+}
