feat: Bold en links de grilla

--- a/src/assets/css/_dx.scss
+++ b/src/assets/css/_dx.scss
@@ -24,6 +24,9 @@
 	}
 	.dx-row {
 		td {
+			a {
+				font-weight: 600 !important;
+			}
 			border: none;
 			// overflow: inherit !important;
 			.btn-group {
