--- a/src/assets/css/_dx.scss
+++ b/src/assets/css/_dx.scss
@@ -931,7 +931,7 @@
 		padding: 0 !important;
 		margin: 0 !important;
 		list-style: none !important;
-		min-height: 300px;
+		// min-height: 300px;
 		border-radius: 6px;
 		background-color: rgba(#fff, 0.97) !important;
 		display: block !important;
@@ -1239,5 +1239,19 @@ $color: rgb(182, 182, 182);
 tr.hovered {
 	td {
 		background-color: $main-color-200 !important;
+	}
+}
+
+.dx-popup-normal {
+	.dx-icon {
+		&::before {
+			color: #fff !important;
+		}
+	}
+	.dx-popup-content {
+		iframe {
+			width: 100%;
+			height: 100%;
+		}
 	}
 }
