--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -657,3 +657,12 @@ label.error {
 		margin-right: 3px;
 	}
 }
+
+hr.sep {
+	border: 0 !important;
+	margin: 0 !important;
+	padding: 0 !important;
+	margin-bottom: 0.5rem !important;
+	padding-bottom: 0.5rem !important;
+	border-bottom: 1px dotted #999 !important;
+}
